--- a/plugin.xml
+++ b/plugin.xml
@@ -80,6 +80,14 @@
         <resource-file src="src/android/res/drawable-hdpi/closebutton.png" target="res/drawable-hdpi/closebutton.png" />
         <resource-file src="src/android/res/drawable-xxhdpi/closebutton.png" target="res/drawable-xxhdpi/closebutton.png" />
 
+        <resource-file src="src/android/res/drawable/closebutton_onpress.png" target="res/drawable/closebutton_onpress.png" />
+        <resource-file src="src/android/res/drawable-hdpi/closebutton_onpress.png" target="res/drawable-hdpi/closebutton_onpress.png" />
+        <resource-file src="src/android/res/drawable-xxhdpi/closebutton_onpress.png" target="res/drawable-xxhdpi/closebutton_onpress.png" />
+
+        <resource-file src="src/android/res/drawable/closebutton_selector.xml" target="res/drawable/closebutton_selector.xml" />
+        <resource-file src="src/android/res/drawable-hdpi/closebutton_selector.xml" target="res/drawable-hdpi/closebutton_selector.xml" />
+        <resource-file src="src/android/res/drawable-xxhdpi/closebutton_selector.xml" target="res/drawable-xxhdpi/closebutton_selector.xml" />
+
         <resource-file src="src/android/res/layout/camera_overlay.xml" target="res/layout/camera_overlay.xml" />
 
         <source-file src="src/android/java/com/mattrayner/vuforia/app/ImageTargets.java"
